scripts/addons/vcluster/nodeport-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: vcluster-nodeport
spec:
  selector:
    app: vcluster
  ports:
  - name: https
    port: 443
    targetPort: 8443
    protocol: TCP
  type: NodePort
