scripts/addons/vcluster/ingress.yaml
# 30-Mar-2024 based on: https://www.vcluster.com/docs/using-vclusters/access
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: vcluster-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: vcluster
            port:
              number: 443
        path: /
        pathType: ImplementationSpecific
